<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toDoItemLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:longClickable="true">

    <GridLayout
        android:id="@+id/toDoGrid"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="4"
        android:rowCount="3"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_row="0"
            android:text="TextView"
            android:longClickable="true"/>

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/statusLabelText" />

        <CheckBox
            android:id="@+id/statusCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:id="@+id/priorityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/priorityLabelText" />

        <Spinner
            android:id="@+id/priorityViewSpin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/DateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/dateLabelText" />

        <TextView
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="TextView" />
    </GridLayout>


</LinearLayout>